fix win loss message visibility

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
 body {
     background-color: grey;
 }
+
+img {
+    height: 10vw;
+    width: 10vw;
+}
